Correction de la place du loader en version mobile pour être compatible sur d'autres navigateurs comme Firefox

--- a/assets/scss/_settings.scss
+++ b/assets/scss/_settings.scss
@@ -66,19 +66,6 @@ $breakpoint-wide: 1440px;
     -webkit-text-fill-color: transparent;
 }
 
-/* Remplissage des coeurs */
-@keyframes fill-bgcolor {
-    from {
-        transform: scale(0.1);
-        font-size: $font-size-heart;
-    }
-
-	to {
-        transform: scale(1);
-		@include bg-fill-heart;
-	}
-}
-
 /* Body */
 body {
     font-family: $font-family-primary;
